- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    6.6.0 Beta3
- 
    None
- 
        ef748095f (dev), c3c5323e6 (6.6)
The constructor got added in commit 08605f0d78485, but is not documented.
- resulted from
- 
                     QTBUG-116783
        Qt 6.6 Core - Documentation Changes Review QTBUG-116783
        Qt 6.6 Core - Documentation Changes Review-         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-116870 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 502629,3 | Doc: Add documentation for added QNativeIpcKey overload | dev | qt/qtbase | Status: MERGED | +2 | 0 | 
| 502955,2 | Doc: Add documentation for added QNativeIpcKey overload | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |