Doc: Add documentation for added QNativeIpcKey overload

Document new implicit constructor introduced in the commit 08605f0d78485

Fixes: QTBUG-116870
Change-Id: I518f0a043d7738698ae568ce0b51db3f2c28574f
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Dennis Oberst <dennis.oberst@qt.io>
(cherry picked from commit ef748095fe587446838428fdc44a9389be81f833)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>